@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2002/09/25 06:50:17 cjep Exp $
+$NetBSD: distinfo,v 1.4 2002/12/08 12:44:13 cjep Exp $
 
-SHA1 (leafnode-1.9.27.rel.tar.bz2) = b07b7dfc7055db2b813b7cd1f4c0db7208871eb4
-Size (leafnode-1.9.27.rel.tar.bz2) = 571153 bytes
+SHA1 (leafnode-1.9.30.rel.tar.bz2) = bd1af03287e623e82e496e8ef35169bb531f3b6c
+Size (leafnode-1.9.30.rel.tar.bz2) = 623456 bytes
 SHA1 (patch-aa) = d1aa900eb9040f8810afd7dbe4f26551c7dad99e
